--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: choroplethrAdmin1
 Type: Package
 Title: Contains an Administrative-Level-1 Map of the World
-Version: 1.0.0
+Version: 1.1.0
 Date: 2014-12-02
 Author: Ari Lamstein <arilamstein@gmail.com>
 Maintainer: Ari Lamstein <arilamstein@gmail.com>
@@ -10,7 +10,9 @@ Description: Contains an administrative-level-1 map of the world.
     subdivision of a country. This package was created for use with the
     choroplethr package.
 License: BSD_3_clause + file LICENSE
-URL: https://groups.google.com/forum/#!forum/choroplethr
+URL: http://www.arilamstein.com,
+    https://github.com/arilamstein/choroplethrAdmin1,
+    https://groups.google.com/forum/#!forum/choroplethr
 Imports: ggplot2
 Packaged: 2014-12-02 11:47:09 UTC; arilamstein
 NeedsCompilation: no
